@@ -1,0 +1,2 @@
+/* sysdep: +getpeereid */
+#define HASGETPEEREID 1
