@@ -1,0 +1,7 @@
+#include <sys/types.h>
+#include <unistd.h>
+
+void main()
+{
+  getpeereid();
+}
