@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.010
 
+- Added a getpeereid sysdep function.
+
 - Added some small optimizations to the SHA-256/512 code and fixed a
   one-off bug.
 
